# fastapi-react-bootstrap

./: .dockerignore  .env  Dockerfile  Dockerfile.mkdocs  README.md  fly.toml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: config.py  logger.py  main.py
docs/: .pages  api.md  business-logic.md  database.md  frontend.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
